--- a/biblioteca_sistedes/static/biblioteca_sistedes/css/form_style.css
+++ b/biblioteca_sistedes/static/biblioteca_sistedes/css/form_style.css
@@ -10,6 +10,29 @@
     -webkit-box-shadow: 0px 0px 10px rgba(0, 102, 150, 2);
     width: 80%;
 }
+.form-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -5px;
+  margin-left: -5px;
+
+  > .col,
+  > [class*="col-"] {
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+}
+
+.form-row-component{
+    margin-right: 15px;
+    margin-left: 15px;
+    width: 47%;
+}
+.form-row-component-alone{
+    margin-right: 15px;
+    margin-left: 15px;
+    width: 100%;
+}
 .form-style-10 .inner-wrap{
     padding: 30px;
     background: #F8F8F8;
@@ -51,7 +74,6 @@
 .form-style-10 input[type="time"],
 .form-style-10 input[type="url"],
 .form-style-10 input[type="password"],
-.form-style-10 textarea,
 .form-style-10 select {
     display: block;
     box-sizing: border-box;
@@ -62,6 +84,20 @@
     height: 40px;
     max-width: 100%;
     min-width: 100%;
+
+}
+
+.form-style-10 textarea{
+    display: block;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    width: 100%;
+    padding: 8px;
+    height: 200px;
+    max-width: 100%;
+    min-width: 100%;
+
 
 }
 
