--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -4,34 +4,44 @@
 {% endblock %}
 {% block form %}
 <h2><u> Crear artículo </u></h2>
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <div class="form-group">
+        <div class="form-row">
+            <div class="form-row-component">
                 <label for="name_ar"><h4>Nombre:</h4></label> {{ form_article.name }}
             </div>
-            <div class="form-group">
-                <label for="desc_ar"><h4>Descripción:</h4></label> {{ form_article.description }}
-            </div>
-            <div class="form-group">
+            <div class="form-row-component">
                 <label for="year_ar"><h4>Año:</h4></label> {{ form_article.year }}
             </div>
-            <div class="form-group">
+        </div>
+        <div class="form-row">
+            <div class="form-row-component-alone">
+                <label for="desc_ar"><h4>Descripción:</h4></label> {{ form_article.description }}
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-row-component-alone">
                 <label for="author_ar"><h4>Autores:</h4></label> {{ form_article.author_ids }}
             </div>
-            <div class="form-group">
+        </div>
+        <div class="form-row">
+            <div class="form-row-component-alone">
                 <label for="keyword_ar"><h4>Palbras clave:</h4></label> {{ form_article.keyword_ids }}
             </div>
-            <div class="form-group">
+        </div>
+        <div class="form-row">
+            <div class="form-row-component-alone">
                 <label for="access_right_ar"><h4>Derechos de acceso:</h4></label> {{ form_article.access_right_ids }}
             </div>
-            <div class="form-group">
+        </div>
+        <div class="form-row">
+            <div class="form-row-component-alone">
                 <label for="track_ar"><h4>Tracks:</h4></label> {{ form_article.track_ids }}
             </div>
-            <div class="form-group">
+        </div>
+        <div class="form-row">
+            <div class="form-row-component-alone">
                 <label for="file_ar"><h4>Adjunto:</h4></label> <input type="file" name="article_file">
             </div>
         </div>
-    </div>
 
     </br>
         <div>
