--- a/biblioteca_sistedes/static/biblioteca_sistedes/css/style.css
+++ b/biblioteca_sistedes/static/biblioteca_sistedes/css/style.css
@@ -60,7 +60,9 @@ body
 	line-height: 1.4em;
 }
 
-.arbolNavegacion a
+.arbolNavegacion a,
+#buscadorSidebar a,
+.divContenido a
 {
 	color: #0077b3;
 	border-bottom: 1px dotted #0077b3;
