Def edition and track

--- a/biblioteca_sistedes/templates/biblioteca_sistedes/edition_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/edition_create.html
@@ -15,6 +15,14 @@
         </div>
         <div class="form-row">
             <div class="form-row-component">
+                <label for="pre_ed"><h4>Preámbulo:</h4></label> {{ form_edition.preamble }}
+            </div>
+            <div class="form-row-component">
+                <label for="desc_ed"><h4>Descripción:</h4></label> {{ form_edition.description }}
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-row-component">
                 <label for="place_ed"><h4>Lugar:</h4></label> {{ form_edition.place }}
             </div>
             <div class="form-row-component">
