--- a/biblioteca_sistedes/templates/biblioteca_sistedes/edition_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/edition_detail.html
@@ -30,7 +30,6 @@
 		<table id="myTable">
 			<thead>
 				<tr>
-					<th>Id</th>
 					<th>Nombre</th>
 					<th>Acciones</th>
 				</tr>
@@ -39,14 +38,15 @@
 			<tbody>
 				{% for track in track_list %}
 				<tr>
-					<td>{{ track.id }}</td>
 					<td >{{ track.name }}</td>
 
 					<td style="width: auto;">
                         <a class="btn btn-primary" href="/track_view/{{ track.id }}/"><i class="fa fa-eye fa-2x"></i></a>
+                        {% if logged_user in track.user_ids.all or logged_user.rol == 1 %}
 						<a class="btn btn-primary" href="/track_update/{{ track.id }}/"><i class="fa fa-edit fa-2x"></i></a>
 						<a class="btn btn-danger" href="/track_delete/{{ track.id }}/"><i class="fa fa-trash fa-2x"></i></a>
-					</td>
+                        {% endif %}
+                    </td>
 				</tr>
 				{% endfor %}
 
