--- a/biblioteca_sistedes/templates/biblioteca_sistedes/get_article.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/get_article.html
@@ -23,7 +23,7 @@
     <div id="entry-keywords" class="entry-content">
         <h3>Palabras Clave:</h3>
         {% for key in article.keyword_ids.all %}
-        <p><a href="/tag/c/?post_type={{key.name}}">{{key.name}}</a> - </p>
+        <p><a href="/tag/{{key.name}}/">{{key.name}}</a> - </p>
         {% endfor %}
     </div>
 
@@ -32,11 +32,11 @@
         <h3>Autor(es):</h3>
         <ul style="font-size: 0.80em;">
             {% for au in article.author_ids.all %}
-            <li><strong><a href="/autor/?txtAutor={{au.name}}">{{au.name}}</a></strong> {<a href="mailto:{{au.email}}" target="_blank" title="este enlace se abrirá en una ventana emergente">{{au.email}}</a>}<br><span style="font-style: italic; ">Grupo UCASE de Ingeniería del Software, Departamento de Ingeniería Informática, Universidad de Cádiz, Cádiz, España</span><br></li>
+            <li><strong><a href="/autor/?txtAutor={{au.name}}">{{au.name}} {{au.middle_name}} {{au.last_name}}</a></strong> {<a href="mailto:{{au.email}}" target="_blank" title="este enlace se abrirá en una ventana emergente">{{au.email}}</a>}<br><span style="font-style: italic; ">Grupo UCASE de Ingeniería del Software, Departamento de Ingeniería Informática, Universidad de Cádiz, Cádiz, España</span><br></li>
             {% endfor %}
         </ul>
     </div>
-    
+
     <!-- texto para citas //-->
     <div id="entry-pdf" class="entry-content">
         <h3>Handle:</h3>
