--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_detail.html
@@ -18,7 +18,6 @@
     <table id="myTable">
         <thead>
         <tr>
-            <th>Id</th>
             <th>Nombre</th>
             <th>Autores</th>
             <th>Palabras clave</th>
@@ -32,7 +31,6 @@
 
         {% for article in article_list %}
         <tr>
-            <td>{{ article.id }}</td>
             <td>{{ article.name }}</td>
             <td>{{ article.author_ids }}</td>
             <td>{{ article.keyword_ids }}</td>
@@ -41,8 +39,10 @@
 
             <td style="width: auto;">
                 <a class="btn btn-primary" href="/article_view/{{ article.id }}/"><i class="fa fa-eye fa-2x"></i></a>
+                {% if logged_user in article.user_ids.all or logged_user.rol == 1 %}
                 <a class="btn btn-primary" href="/article_update/{{ article.id }}/"><i class="fa fa-edit fa-2x"></i></a>
                 <a class="btn btn-danger" href="/article_delete/{{ article.id }}"><i class="fa fa-trash fa-2x"></i></a>
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
