--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -68,7 +68,8 @@
                                     {% else %}
                                         <span class="username">{{ request.session.username }}</span>
                                     {% endif %}
-                                </div><br/>
+                                </div>
+                                <br/>
                                 <div>
                             <div class="dropdown-menu">
                             {% if request.session.rol == 1 %}
@@ -83,6 +84,10 @@
                             {% endif %}
                             {% if request.session.rol == 1 %}
                                 <li style ="font-size: 13px;"><a tabindex="-1" href="/user_list/">Usuarios</a></li><br/>
+                            {% endif %}
+                            {% if request.session.rol == 1 %}
+                                <li style ="font-size: 13px;"><a tabindex="-1" href="/author_list/">Autores</a></li><br/>
+                                <li style ="font-size: 13px;"><a tabindex="-1" href="/keyword_list/">Palabras clave</a></li><br/>
                             {% endif %}
                             <li style ="font-size: 13px;"><a tabindex="-1" href="/logout/">Cerrar sesion</a></li><br/>
                             </div>
