--- a/biblioteca_sistedes/static/biblioteca_sistedes/css/login.css
+++ b/biblioteca_sistedes/static/biblioteca_sistedes/css/login.css
@@ -57,10 +57,11 @@ body.login {
 }
 .login .form-login {
     padding: 4px 0;
+    height: 40px;
     float: left;
     width: 100%;
     border-bottom: none;
-    margin: 0 -10 10 -5;
+    margin: 10 -10 10 -5;
 }
 
 .login .form-row label {
