--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -38,7 +38,10 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="form-row-component-alone">
+            <div class="form-row-component">
+                <label for="ed_ar"><h4>Edición:</h4></label> {{ form_article.edition_id }}
+            </div>
+            <div class="form-row-component">
                 <label for="file_ar"><h4>Adjunto:</h4></label> <input type="file" name="article_file">
             </div>
         </div>
