--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
@@ -5,26 +5,27 @@
 {% block form %}
 <h2><u> Crear autor </u></h2>
 {% csrf_token %}
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <div class="form-group">
-                <label for="name_au"><h4>Nombre:</h4></label> {{ form_author.name }}
-            </div>
-            <div class="form-group">
-                <label for="middle_au"><h4>Primera apellido:</h4></label> {{ form_author.middle_name }}
-            </div>
-            <div class="form-group">
-                <label for="last_au"><h4>Segundo apellido:</h4></label> {{ form_author.last_name }}
-            </div>
+
+    <div class="form-row">
+        <div class="form-row-component">
+            <label for="name_au"><h4>Nombre:</h4></label> {{ form_author.name }}
         </div>
-        <div class="form-group">
+        <div class="form-row-component">
             <label for="em_au"><h4>Email:</h4></label> {{ form_author.email }}
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-row-component">
+            <label for="middle_au"><h4>Primera apellido:</h4></label> {{ form_author.middle_name }}
+        </div>
+        <div class="form-row-component">
+            <label for="last_au"><h4>Segundo apellido:</h4></label> {{ form_author.last_name }}
         </div>
     </div>
     </br>
     <div>
         <div>
-            <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear autor">
+            <input style="background-color: #006699;" class="form-submit" type="submit" value="Guardar autor">
             <button onclick="window.location.href='/author_list/'" class="cancel-button">Cancelar</button>
         </div>
     </div>
