--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
@@ -59,7 +59,7 @@
                 <li class="dropdown-submenu">
                     <a class="test" id="user-menu" tabindex="-1" href="#" onclick="dropdown()"> <i class="fa fa-user"></i> <i class="fa fa-caret-down" style="font-size:24px"></i><span
                             class="caret"></span></a>
-                    <ul id="arrow-menu" >
+                    <ul id="arrow-menu">
                             <div class="user-section">
                                 {% if request.session.username|length >= 7 %}
                                     <span class="username">{{ request.session.username|slice:"0:7" }}...</span>
@@ -82,6 +82,10 @@
                         {% if request.session.rol == 1 %}
                             <li style ="font-size: 13px;"><a tabindex="-1" href="/user_list/">Usuarios</a></li><br/>
                         {% endif %}
+                        {% if request.session.rol == 1 %}
+                            <li style ="font-size: 13px;"><a tabindex="-1" href="/author_list/">Autores</a></li><br/>
+                            <li style ="font-size: 13px;"><a tabindex="-1" href="/keyword_list/">Palabras clave</a></li><br/>
+                        {% endif %}
                         <li style ="font-size: 13px;"><a tabindex="-1" href="/logout/">Cerrar sesion</a></li><br/>
                         </div>
                     </ul>
@@ -97,7 +101,6 @@
     </div>
 
 </header>
-
 
 <body class=" login" data-admin-utc-offset="0" style="width: 100%;">
 
