--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/tree.collapse.js' %}"></script>
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/multi.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/better-multiselect-filter.js' %}"></script>
+    <script type="text/javascript" src="{% static 'biblioteca_sistedes/js/table_pagination.js' %}"></script>
     {% endblock %}
 
 
