--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -48,7 +48,7 @@
 
     </br>
         <div>
-            <input style="background-color: #006699;" class="form-submit" type="submit" value="Crear artículo">
+            <input style="background-color: #006699;" class="form-submit" type="submit" value="Guardar artículo">
             <button onclick="window.location.href='/article_list/'" class="cancel-button">Cancelar</button>
         </div>
 {% endblock %}
