--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
@@ -17,6 +17,14 @@
             <label><h4>Descripción:</h4></label> {{ article.description }}
         </div>
         <div class="form-group">
+            <label><h4>Responsables del track:</h4>
+            <ul>
+            {% for user in article.user_ids.all %}
+                <li> {{user.name}} {{user.surnames}} </li>
+            {% endfor %}
+            </ul>
+        </div>
+        <div class="form-group">
             <label><h4>Archivo:</h4></label> <a href="/download/{{article.id }}" target="_blank"> {{ article.name }} </a>
         </div>
     </div>
@@ -39,7 +47,7 @@
 
 					<td style="width: auto;">
 						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/"><i class="fa fa-edit fa-2x"></i></a>
-						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/"><i class="fa fa-trash fa-2x"></i></a>
+						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
@@ -72,7 +80,7 @@
 					<td style="width: auto;">
                         <a class="btn btn-primary" href="/author_view/{{ author.id }}/"><i class="fa fa-eye fa-2x"></i></a>
 						<a class="btn btn-primary" href="/author_update/{{ author.id }}/"><i class="fa fa-edit fa-2x"></i></a>
-						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/"><i class="fa fa-trash fa-2x"></i></a>
+						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
@@ -103,7 +111,7 @@
                         <a class="btn btn-primary" href="/track_view/{{ track.id }}/"><i class="fa fa-eye fa-2x"></i></a>
                         {% if logged_user in track.user_ids.all or logged_user.rol == 1 %}
                         <a class="btn btn-primary" href="/track_update/{{ track.id }}/"><i class="fa fa-edit fa-2x"></i></a>
-                        <a class="btn btn-danger" href="/track_delete/{{ track.id }}/"><i class="fa fa-trash fa-2x"></i></a>
+                        <a class="btn btn-danger" href="/track_delete/{{ track.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
                         {% endif %}
                     </td>
                 </tr>
