--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
@@ -18,7 +18,6 @@
 		<table id="myTable">
 			<thead>
 				<tr>
-					<th>Id</th>
 					<th>Nombre</th>
 					<th>Primer apellido</th>
 					<th>Segundo apellido</th>
@@ -29,19 +28,19 @@
 			<tbody>
 				{% for author in object_list %}
 				<tr>
-					<td>{{ author.id }}</td>
 					<td>{{ author.name }}</td>
 					<td>{{ author.middle_name }}</td>
 					<td>{{ author.last_name }}</td>
 
 					<td style="width: auto;">
 						<a class="btn btn-primary" href="/author_update/{{ author.id }}/"><i class="fa fa-edit fa-2x"></i></a>
-						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/"><i class="fa fa-trash fa-2x"></i></a>
+						<a class="btn btn-danger" href="/author_delete/{{ author.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
-            {% if object_list|length == 0 %}
-            <h1>No hay registros de autores</h1>
-            {% endif %}
+        </table>
+        {% if object_list|length == 0 %}
+        <h1>No hay registros de autores</h1>
+        {% endif %}
 {% endblock%}
