--- a/biblioteca_sistedes/templates/biblioteca_sistedes/edition_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/edition_list.html
@@ -18,7 +18,6 @@
 		<table id="myTable">
 			<thead>
 				<tr>
-					<th>Id</th>
 					<th>Nombre</th>
 					<th>Año</th>
 					<th>Conferencia</th>
@@ -29,7 +28,6 @@
 			<tbody>
 				{% for edition in object_list %}
 				<tr>
-					<td>{{ edition.id }}</td>
 					<td>{{ edition.name }}</td>
 					<td>{{ edition.year }}</td>
 					<td >{{ edition.conference_id.name }}</td>
@@ -37,7 +35,7 @@
 					<td style="width: auto;">
 						<a class="btn btn-primary" href="/edition_view/{{ edition.id }}/"><i class="fa fa-eye fa-2x"></i></a>
 						<a class="btn btn-primary" href="/edition_update/{{ edition.id }}/"><i class="fa fa-edit fa-2x"></i></a>
-						<a class="btn btn-danger" href="/edition_delete/{{ edition.id }}/"><i class="fa fa-trash fa-2x"></i></a>
+						<a class="btn btn-danger" href="/edition_delete/{{ edition.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
