--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_detail.html
@@ -42,7 +42,7 @@
             <td style="width: auto;">
                 <a class="btn btn-primary" href="/article_view/{{ article.id }}/"><i class="fa fa-eye fa-2x"></i></a>
                 <a class="btn btn-primary" href="/article_update/{{ article.id }}/"><i class="fa fa-edit fa-2x"></i></a>
-                <a class="btn btn-danger" href="/article_delete/{{ article.id }}"><i class="fa fa-trash fa-2x"></i></a>
+                <a class="btn btn-danger" href="/article_delete/{{ article.id }}" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
             </td>
         </tr>
         {% endfor %}
