--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
@@ -18,7 +18,6 @@
 		<table id="myTable">
 			<thead>
 				<tr>
-					<th>Id</th>
 					<th>Nombre</th>
 				</tr>
 
@@ -32,7 +31,7 @@
 
 					<td style="width: auto;">
 						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/"><i class="fa fa-edit fa-2x"></i></a>
-						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/"><i class="fa fa-trash fa-2x"></i></a>
+						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 				{% endfor %}
