--- a/biblioteca_sistedes/templates/biblioteca_sistedes/track_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/track_list.html
@@ -34,7 +34,7 @@
 					<td style="width: auto;">
                         <a class="btn btn-primary" href="/track_view/{{ track.id }}/"><i class="fa fa-eye fa-2x"></i></a>
 						<a class="btn btn-primary" href="/track_update/{{ track.id }}/"><i class="fa fa-edit fa-2x"></i></a>
-						<a class="btn btn-danger" href="/track_delete/{{ track.id }}/"><i class="fa fa-trash fa-2x"></i></a>
+						<a class="btn btn-danger" href="/track_delete/{{ track.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
                 {% endif %}
