--- a/biblioteca_sistedes/templates/biblioteca_sistedes/conferences.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/conferences.html
@@ -18,7 +18,7 @@
     <p>Actualmente las Jornadas SISTEDES albergan tres eventos:</p>
     <ul>
         {% for conference in conferences %}
-            <li><a href="/biblioteca/conferencias/{{ conference.domain }}/">{{ conference.name }}</a>
+            <li><a href="/conferencias/{{ conference.domain }}/">{{ conference.name }}</a>
         {% endfor %}
     </ul>
     <p>En la Biblioteca Digital de SISTEDES se almacenarán también las actas de los eventos precedentes, remontándose
