--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -42,7 +42,7 @@
                 <label for="ed_ar"><h4>Edición:</h4></label> {{ form_article.edition_id }}
             </div>
             <div class="form-row-component">
-                <label for="file_ar"><h4>Adjunto:</h4></label> <input type="file" name="article_file">
+                <label for="article_file"><h4>Adjunto:</h4></label> <input type="file" name="article_file">
             </div>
         </div>
 
